force-app/main/default/objects/JBCXM__UserAdoption__c/JBCXM__UserAdoption__c.object-meta.xml
<CustomObject>
    <description>Adoption object is used to store all the data related to User and/or Product Adoption.</description>
    <label>User Adoption</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>UserAdoptionName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Adoption</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>