force-app/main/default/objects/JBCXM__UserAdoption__c/fields/JBCXM__Account__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Account__c</fullName>
    <description>Maps to a customer (Account) that the record belongs to.</description>
    <inlineHelpText>Customer name</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>User Adoption</relationshipLabel>
    <relationshipName>UserAdoption</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>