force-app/main/default/objects/JBCXM__UserAdoption__c/fields/JBCXM__Date__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Date__c</fullName>
    <description>Date against which Adoption Data is loaded.</description>
    <inlineHelpText>Date against which Adoption Data is loaded.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>