force-app/main/default/objects/JBCXM__UserAdoption__c/fields/JBCXM__MeasureID__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MeasureID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Adoption Measure against which the data is loaded. Adoption measures can be added to the PickList object and/or existing measures renamed.</description>
    <inlineHelpText>Adoption Measure against which the data is loaded.</inlineHelpText>
    <label>Measure Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>JBCXM__PickList__c.JBCXM__Category__c</field>
            <operation>equals</operation>
            <value>Adoption Measure Types</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>User Adoption</relationshipLabel>
    <relationshipName>UserAdoption</relationshipName>
    <type>Lookup</type>
</CustomField>