force-app/main/default/objects/JBCXM__UserAdoption__c/fields/JBCXM__MeasureValue__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MeasureValue__c</fullName>
    <description>Value for the Adoption Measure.</description>
    <inlineHelpText>Value for the Adoption Measure.</inlineHelpText>
    <label>Measure Value</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>