force-app/main/default/objects/JBCXM__UserAdoption__c/fields/JBCXM__Month__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Month__c</fullName>
    <formula>MONTH(JBCXM__Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>