force-app/main/default/objects/JBCXM__UserAdoption__c/fields/JBCXM__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a look up to opportunity.Used this field to populate adoption by opportunity</description>
    <inlineHelpText>Select opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>User Adoption</relationshipLabel>
    <relationshipName>User_Adoption</relationshipName>
    <type>Lookup</type>
</CustomField>