force-app/main/default/objects/JBCXM__UserAdoption__c/fields/JBCXM__Period02__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Period02__c</fullName>
    <formula>IF(MONTH(JBCXM__Date__c) == 2 , JBCXM__MeasureValue__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period02</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>