force-app/main/default/objects/JBCXM__UserAdoption__c/fields/JBCXM__Year__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Year__c</fullName>
    <formula>YEAR(JBCXM__Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>