force-app/main/default/objects/JBCXM__UserAdoption__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>JBCXM__Account__c</columns>
    <columns>JBCXM__Date__c</columns>
    <columns>JBCXM__MeasureID__c</columns>
    <columns>JBCXM__MeasureValue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JBCXM__Year__c</field>
        <operation>equals</operation>
        <value>2011</value>
    </filters>
    <label>All</label>
</ListView>